<resources>
    <string name="app_name">Todo List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mark">details</string>
    <string name="completed">Completed</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="clear_list">Clear List</string>
    <string name="remove_from_list">Remove</string>
    <string name="view_detail">View Details</string>
    <string name="id">Id</string>
    <string name="title">Title</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="user_id">User Id</string>
</resources>