<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green"
    tools:context=".view.ui.TodoListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttons_display" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/recycler_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_list"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/remove_from_list_button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/remove_from_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_from_list"
                app:layout_constraintRight_toLeftOf="@id/view_details_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/clear_list_button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/view_details_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_detail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/remove_from_list_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>